# soundcloud

./: .gitignore  README.md  build.bat
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: adblock.rs  discord.rs  lib.rs  main.rs
